# ccnss26-tutorials

./: .gitignore  README.md  demo1_oja_receptive_field.ipynb  demo2_eghr_ica.ipynb  demo3_force_rnn.ipynb  demo3_td_reaching.ipynb  pyproject.toml  requirements.txt  setup_env.sh
ccnss_helpers/: __init__.py  _checkpoint.py  data.py  plotting.py
docs/: setup_email_template.md
neural-data-analysis/: README.md  setup_env.sh
neural-data-analysis/ccnss_helpers/: __init__.py  _checkpoint.py  data.py
neural-data-analysis/docs/: setup_email_template.md
neural-data-analysis/notebooks/: session1_coding_and_networks.ipynb  session2_dynamics_and_states.ipynb
neural-data-analysis/scripts/: pin_allen_session.py  run_notebook_local.py
neural-data-analysis/solutions/: session1_solutions.ipynb  session2_solutions.ipynb
neural-data-analysis/tests/: test_data_nlb.py
notebooks/: session1_coding_and_networks.ipynb  session2_dynamics_and_states.ipynb  warmup_python_numpy.ipynb
plasticity-tutorial/: demo2_eghr_ica.ipynb  demo3_td_reaching.ipynb
plasticity-tutorial/notebooks/: demo1_oja_pca.ipynb  demo2_eghr_ica.ipynb  demo3_td_dopamine.ipynb  demo3_td_reaching.ipynb  demo4_td_dopamine.ipynb  demo4_td_reaching.ipynb
plasticity-tutorial/scripts/: SDM1997_demo.m  TDlearning_el.m
plasticity-tutorial/solutions/: demo1_oja_pca.ipynb  (+1 more)
scripts/: create_session1_notebook.py  derive_student_notebook.py
solutions/: session1_solutions.ipynb  session2_solutions.ipynb
tests/: test_checkpoint.py  test_data_allen.py  test_notebooks.py  test_package.py  test_plotting.py
(+3 files in other folders)
