[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccnss_helpers"
version = "0.1.0"
description = "Helpers for CCNSS 2026 Neural Data Analysis tutorial"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",
    "matplotlib>=3.8",
    "pandas>=2.2",
    "networkx>=3.3",
]

[tool.setuptools.packages.find]
include = ["ccnss_helpers*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
