[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccnss_helpers"
version = "0.1.0"
description = "Helpers for CCNSS 2026 Neural Data Analysis tutorial"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "matplotlib>=3.5",
    "pandas>=1.5",
    "networkx>=3.0",
]

[tool.setuptools.packages.find]
include = ["ccnss_helpers*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
